## Process this file with automake to produce Makefile.in
## ##################################################

SUBDIRS = config lib libzypp.test tests

PACKAGE=libzypp
AUTOMAKE_OPTIONS = dejagnu

## ##################################################

#LDADD =	$(top_srcdir)/zypp/lib@PACKAGE@.la

## ##################################################
